[gd_scene load_steps=9 format=3 uid="uid://dnot78jcyq87e"]

[ext_resource type="Script" path="res://Cards/cryptdex.gd" id="1_obisf"]
[ext_resource type="Script" path="res://TextureButton.gd" id="2_bcie5"]
[ext_resource type="Texture2D" uid="uid://d142djlm5njuv" path="res://Cards/Borders/Border.png" id="3_nsk11"]

[sub_resource type="Gradient" id="Gradient_3vqfu"]
colors = PackedColorArray(0.67451, 0, 0.996078, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_faexl"]
gradient = SubResource("Gradient_3vqfu")
width = 250
height = 150
fill_to = Vector2(1, 2.08165e-12)

[sub_resource type="Gradient" id="Gradient_0jcb8"]
colors = PackedColorArray(0.619608, 0, 1, 1, 1, 0.694118, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_50x6w"]
gradient = SubResource("Gradient_0jcb8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qtu8f"]
texture = SubResource("GradientTexture2D_50x6w")

[node name="Cryptdex" type="Node2D"]
scale = Vector2(0.222, 0.222)
script = ExtResource("1_obisf")

[node name="Screen" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 454.0
scale = Vector2(0.7, 0.7)

[node name="HBoxContainer" type="HBoxContainer" parent="Screen"]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="Screen/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
texture_normal = SubResource("GradientTexture2D_faexl")
script = ExtResource("2_bcie5")

[node name="Current In Deck" type="HBoxContainer" parent="Screen"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card1" type="TextureButton" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(150, 210)
layout_mode = 2
texture_normal = ExtResource("3_nsk11")

[node name="MarginContainer2" type="MarginContainer" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card2" type="TextureButton" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(150, 210)
layout_mode = 2
texture_normal = ExtResource("3_nsk11")

[node name="MarginContainer3" type="MarginContainer" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card3" type="TextureButton" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(150, 210)
layout_mode = 2
texture_normal = ExtResource("3_nsk11")

[node name="MarginContainer4" type="MarginContainer" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card4" type="TextureButton" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(150, 210)
layout_mode = 2
texture_normal = ExtResource("3_nsk11")

[node name="MarginContainer5" type="MarginContainer" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card5" type="TextureButton" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(150, 210)
layout_mode = 2
texture_normal = ExtResource("3_nsk11")
stretch_mode = 0

[node name="MarginContainer6" type="MarginContainer" parent="Screen/Current In Deck"]
custom_minimum_size = Vector2(242, 0)
layout_mode = 2

[node name="Bottom" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1920, 720)
offset_top = 375.0
offset_right = 2742.0
offset_bottom = 1375.0
scale = Vector2(0.7, 0.7)

[node name="Cards" type="ScrollContainer" parent="Bottom"]
custom_minimum_size = Vector2(2742, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qtu8f")

[node name="Scroll" type="VBoxContainer" parent="Bottom/Cards"]
custom_minimum_size = Vector2(2730, 705)
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Bottom/Cards/Scroll"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2

[node name="Row1" type="HBoxContainer" parent="Bottom/Cards/Scroll"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card1" type="TextureButton" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card2" type="TextureButton" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card3" type="TextureButton" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card4" type="TextureButton" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card5" type="TextureButton" parent="Bottom/Cards/Scroll/Row1"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom/Cards/Scroll"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="Row2" type="HBoxContainer" parent="Bottom/Cards/Scroll"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card1" type="TextureButton" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card2" type="TextureButton" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card3" type="TextureButton" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card4" type="TextureButton" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card5" type="TextureButton" parent="Bottom/Cards/Scroll/Row2"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Bottom/Cards/Scroll"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="Row3" type="HBoxContainer" parent="Bottom/Cards/Scroll"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card1" type="TextureButton" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card2" type="TextureButton" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card3" type="TextureButton" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card4" type="TextureButton" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card5" type="TextureButton" parent="Bottom/Cards/Scroll/Row3"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Bottom/Cards/Scroll"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="Row4" type="HBoxContainer" parent="Bottom/Cards/Scroll"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card1" type="TextureButton" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card2" type="TextureButton" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card3" type="TextureButton" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card4" type="TextureButton" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card5" type="TextureButton" parent="Bottom/Cards/Scroll/Row4"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Bottom/Cards/Scroll"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="Row5" type="HBoxContainer" parent="Bottom/Cards/Scroll"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card1" type="TextureButton" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card2" type="TextureButton" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card3" type="TextureButton" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card4" type="TextureButton" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(242, 2.08165e-12)
layout_mode = 2

[node name="Card5" type="TextureButton" parent="Bottom/Cards/Scroll/Row5"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
